--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "axios": "^0.21.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.263.1",
     "next": "^13.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.12.1",
     "@babel/preset-react": "^7.18.6",
     "@next/eslint-plugin-next": "^10.0.4",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.16",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.27.0",
